# ai-learning-generator

./: .env.example  .gitattributes  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  __init__.py  api-examples.md  app.py  config.py  constants.js  env.template  index.html  openai_mw.py  package.json  pyproject.toml  quiz.html  quiz.js  requirements.txt  setup.bat  setup.py  setup.sh
css/: bootstrap.min.css  index.css  responsive.css  style.css
js/: custom.js
models/: __init__.py  api_models.py  content_models.py  quiz_models.py  user_models.py
scripts/: __init__.py  data_manager.py  generate_quiz.py
tests/: __init__.py  test_app.py  test_config.py  test_integration.py
utils/: __init__.py  ai_helpers.py  file_operations.py  helpers.py  text_processing.py  validation.py
